# screenlens

./: .gitignore  Cargo.toml  config.example.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/ai/: client.rs  mod.rs  models.rs
crates/core/src/capture/: mod.rs  platform_macos.rs  platform_windows.rs  types.rs
crates/core/src/db/: mod.rs  models.rs  search.rs
crates/core/src/sharing/: mod.rs
crates/ffi/: Cargo.toml  screenlens.h
crates/ffi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  main.rs  state.rs
crates/server/src/routes/: images.rs  mod.rs  share.rs
