[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ffi",
    "crates/server",
    "platforms/windows",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["jenyl"]

[workspace.dependencies]
screenlens-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
