[package]
name = "screenlens-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Database
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }

# Image handling
image = "0.25"
base64 = "0.22"

# Config
directories = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData"] }
